feat: Add remap-cwd-prefix rustflag by default

--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -34,7 +34,7 @@ on:
       rust-flags:
         description: 'RUSTFLAGS environment variable used for compilation'
         type: string
-        default: ''
+        default: '-Z remap-cwd-prefix=.'
 
 jobs:
   calculate-matrix:
