--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -228,7 +228,7 @@ jobs:
             FROM $CROSS_BASE_IMAGE
             RUN apt-get update >/dev/null 2>&1
             RUN apt-get install --yes reprotest diffoscope >/dev/null 2>&1
-            COPY --chmod=555 /tmp/setarch /usr/bin/setarch
+            COPY --chmod=555 setarch_stub /usr/bin/setarch
           COMPILE_CMD: >
             CARGO_TARGET_DIR=./target
             cargo build
@@ -239,7 +239,7 @@ jobs:
             && cp -vaf ./target/. \"$CARGO_TARGET_DIR/\"
         run: |
           dockerfile="$(mktemp)"
-          echo "$SETARCH_STUB" > /tmp/setarch
+          echo "$SETARCH_STUB" > setarch_stub
           echo "$CROSS_DOCKERFILE" > "$dockerfile"
           env \
           CROSS_BUILD_DOCKERFILE="$dockerfile" \
